<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/transferValueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transfer_to_whom"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/pixKeyInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_pix_key"
        android:inputType="text"
        android:padding="8dp"
        android:textSize="16sp"
        android:autofillHints=""/>

    <Button
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/continue_button" />

</LinearLayout>
